mutations/mutating-hook/manifests/configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: deployment-replicas-webhook
webhooks:
  - name: deployment-replicas-webhook.mutating-test-webhook.svc
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - mutating-test
    clientConfig:
      service:
        name: deployment-replicas-webhook
        namespace: mutating-test-webhook
        path: /mutate
        port: 443
        caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tTUlJRFVUQ0NBam1nQXdJQkFnSUlmeW1tN2hha2lwRXdEUVlKS29aSWh2Y05BUUVMQlFBd05qRTBNRElHQTFVRUF3d3JiM0JsYm5Ob2FXWjBMWE5sY25acFkyVXRjMlZ5ZG1sdVp5MXphV2R1WlhKQU1UYzJNakU0TnpjNE1UQWVGdzB5TlRFeE1ETXhOak0yTWpGYUZ3MHlPREF4TURJeE5qTTJNakphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6YUdsbWRDMXpaWEoyYVdObExYTmxjblpwYm1jdGMybG5ibVZ5UURFM05qSXhPRGMzT0RFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNrd2Nra0NWK1RXMVhKRXJBM1Y1TjFtZkNjR1UvZEFSNGlXeUlJa1hWaWFraFNwVX [...]
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
    timeoutSeconds: 5
